Fixed fanlayout on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -140,10 +140,10 @@ footer p { color: #777; font-variant: small-caps; font-size: 15px; margin-top: 1
 #fan-graph-legend .legendLabel:hover a { color: darkgrey;}
 
 /*.fan-technical-keys p { margin-left: 30px; }*/
-.fan-technical-values p { margin-right: 30px; }
-.fa-info-circle { float: right; margin-top: 15px;}
-.fa-info-circle:first-of-type { margin-top: 5px;}
-.fa-info-circle:hover { cursor: pointer;}
+/*.fan-technical-values p { margin-right: 30px; }*/
+/*.fa-info-circle { float: right; margin-top: 15px;}*/
+/*.fa-info-circle:first-of-type { margin-top: 5px;}*/
+/*.fa-info-circle:hover { cursor: pointer;}*/
 
 /************************************
  *    Media queries - Detailpagina     *
@@ -225,7 +225,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .fan hr:nth-child(3) { display: block }
 
 
-    .fan-information-basic { height: 250px; border-bottom: 1px solid lightgrey; }
+    .fan-information-basic { height: 260px; border-bottom: 1px solid lightgrey; }
     .fan .fan-information-basic h2 { padding-top: 0;}
     .fan .fan-information-basic h2.fan-status-heading { padding-top: 0; font-size: 15px; margin-bottom: 5px;}
     .fan .fan-information-basic h2.fan-direction-heading { font-size: 12px; margin-top: 10px; }
@@ -233,6 +233,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
     .fan p.fan-status { font-size: 25px; margin-bottom: 20px;}
 
     .fan .arrow-squiggly-down { font-size: 23px;}
+    .fan .arrow-squiggly-up { font-size: 35px; margin: -10px;}
     .fan .fan-blowing-direction p:last-child { font-size: 10px; margin-top: 0;}
     .fan .fan-information-basic .expand-fan-button { margin: 10px auto !important; font-size: 15px !important; width: 15px !important; float: none !important;}
 
